# mini-fastapi-boilerplate

./: .db.env  Makefile  README.md  docker-compose.yaml  main.py  pyproject.toml
apps/core/: models.py
db/: session.py
db/base/: __init__.py  base.py
migrations/: env.py
migrations/versions/: 496157a9ca5b_added_requestlog_model_initial_migration.py
settings/: config.py
